<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/time_pizza_app_color"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ru.pks.pizzatime.RaphaelActivity"
        tools:layout_editor_absoluteY="73dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/pizza_time_100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tagline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="start|center_horizontal"
            android:text="@string/tagline"
            android:textColor="#feeb9e"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toTopOf="@+id/logo" />

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/raphael_pizza"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <ImageView
            android:id="@+id/pizzaImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/pizza"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemName"
            app:srcCompat="@drawable/pizza" />

        <TextView
            android:id="@+id/itemDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/raphael_pizza_desc"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pizzaImageView" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/fab_color"
            app:layout_constraintStart_toEndOf="@+id/itemName"
            app:layout_constraintTop_toBottomOf="@+id/itemName"
            app:srcCompat="@drawable/ic_offer_64" />

        <TextView
            android:id="@+id/itemView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="387dp" />

        <TextView
            android:id="@+id/itemBonusView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bonus"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="420dp" />

        <TextView
            android:id="@+id/itemTotalView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="458dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addToOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/fab_color"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_shopping_basket_button_"
            tools:layout_editor_absoluteX="230dp"
            tools:layout_editor_absoluteY="399dp" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>